# UN_OSGeo_challenge

./: .gitignore  Readme.md  pyproject.toml  requirements.txt
source/: conf.py  index.rst
source/_static/: custom.css  ex1_clip_preprocess.txt  ex1_pwd.txt  ex1_rgb-compositions_stacks.txt
source/exercise-1-change-detection/: 01_introduction.md  02_supervised-change-detection.md  03_general-configuration.md  04_download-landsat-images.md  05_dataset-preparation.md  06_collect-samples-train-test.md  07_semantic-segmentation.md  08_change-detection.md  09_concluding-remarks.md  10_appendix_A.md  11_appendix_B.md
source/exercise-2-regression/: 01_introduction.md  02_regression.md  03_general-configuration.md  04_gee-elements.md  05_data-pyqgis-gee.md  06_linear-regression.md  07_analyzing-results.md  08_concluding-remarks.md  09_appendix_A.md  get_trend.py
